# calculator

./: .gitignore  CMakeLists.txt  README.md
calc/: CMakeLists.txt  Calculator.cpp  Calculator.h
error/: Error.h
evaluator/: CMakeLists.txt  Evaluator.cpp  Evaluator.h
exec/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/evaluator_test/: CMakeLists.txt  test_evaluator.cpp
